tests/fails/f46.t
if not require("fail") then return end

terra foo()
  var a,b,c
end
foo()
